--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body>
 
   <div style="position:absolute; left:50%; top:50%; transform:translate(-50%,-50%);"><img src="pessimist.png" /></div>
-  <script src="js/app.js"></script>
+  <script src="app.js"></script>
 
 </body>
 
