--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <body>
 
-  <div style="position:absolute; left:50%; top:50%; transform:translate(-50%,-50%);"><img src="pessimist.png" /></div>
+  <div style="position:absolute; left:50%; top:50%; transform:translate(-50%,-50%);"><img src="pessimist.jpg" /></div>
   
 </body>
 
